$Id$

2016-05-10  Christian Franke  <franke@computer.org>

	os_openbsd.cpp: Compile fix (regression from r4156).

	os_netbsd.cpp: Apply patch-os__netbsd.cpp 1.3 (2016-05-08) from
	pkgsrc.se/sysutils/smartmontools:
	- Compile fix (regression from r4156).
	- Use a raw disk device file on NetBSD.

2016-05-07  Christian Franke  <franke@computer.org>

	smartmontools 6.5

2016-05-06  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Samsung SpinPoint P80 SD: *J/P variant
	- Seagate Samsung SpinPoint M7E
	- Hitachi/HGST Travelstar Z5K500: *E680 variant
	- Hitachi Travelstar 7K500: HITACHI variant
	- Hitachi Ultrastar 7K3000: *A641 variant
	- HGST Ultrastar He8
	- Toshiba 2.5" HDD MQ01ABD...: *V variant
	- Seagate Desktop HDD.15: 5TB
	- Seagate SV35.3
	- Seagate SV35: *0001 variant
	- Seagate DB35: SATA variant
	- Western Digital Blue: 2-6TB, *Z variant
	- Western Digital RE4-GP: *2003* variant
	- Western Digital Re: Rename, 2-6TB
	- Western Digital Caviar Green: SATA 6Gb/s variant
	- Western Digital Caviar Black: *7501AAES*
	- Western Digital Blue Mobile: 2TB
	- Western Digital Elements / My Passport (USB, AF): *7500B*, 3TB

2016-05-01  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Samsung based SSDs: 840 EVO 750GB (ticket #692), 850 EVO M.2,
	  SM843T *HCFV* variant
	- USB: WD My Passport (0x1058:0x07ae) (ticket #686)
	- USB: JMicron JMS561 (0x152d:0x9561)

	nvmecmds.cpp: Enhance debug hex dump to sizeof Identify structs.
	Do not dump trailing zero bytes.

2016-04-27  Christian Franke  <franke@computer.org>

	nvmeprint.cpp, nvmeprint.h, smartctl.cpp, smartctl.8.in:
	Add NVMe support for 'smartctl -c'.  Print various drive and
	namespace capabilites.  Remove related info from '-i' output.

2016-04-24  Christian Franke  <franke@computer.org>

	nvmeprint.cpp: Fix formatting of error log with unset LBA fields.

	utility.cpp, utility.h: Skip leading blanks in format_char_array().
	Some NVMe devices return right aligned text fields.
